@@ -1,12 +1,11 @@
-// dummy-data/src/main/java/com/backend/dummydata/service/DummyDataGenerator.java
-package com.backend.dummy_data.generator.;
+package com.backend.dummy_data.generator;
 
-import com.backend.common.exception.CustomException;
 import com.backend.common.util.JwtUtil;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.core.io.ByteArrayResource;
 import org.springframework.http.*;
 import org.springframework.stereotype.Component;
 import org.springframework.util.LinkedMultiValueMap;
@@ -19,8 +18,9 @@ import java.util.*;
 @RequiredArgsConstructor
 public class DummyDataGenerator {
 
-    private final RestTemplate restTemplate = new RestTemplate();
     private final JwtUtil jwtUtil;
+    private final RestTemplate restTemplate;
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Value("${app.dummy-data.enabled:true}")
     private boolean enabled;
@@ -28,151 +28,195 @@ public class DummyDataGenerator {
     @Value("${app.api-gateway.url:https://localhost:8443}")
     private String gatewayUrl;
 
-    private String adminToken;
+    private String adminTokenCookie;
+
+    // Store Seller details (for login later)
+    private List<Map<String, Object>> createdSellers = new ArrayList<>();
 
     @PostConstruct
-    public void generate() throws Exception {
-        if (!enabled) return;
-
-        System.out.println("Generating dummy data...");
-
-        // 1. Login as admin (or create one)
-        adminToken = loginAdmin();
-
-        // 2. Clear all data
-        clearAllData();
-
-        // 3. Create sellers
-        List<String> sellerIds = createSellers();
-
-        // 4. Create clients
-        createClients();
-
-        // 5. Create products + images
-        for (String sellerId : sellerIds) {
-            createProductsForSeller(sellerId);
+    public void generate() {
+        if (!enabled) {
+            System.out.println("Dummy data generation is disabled.");
+            return;
         }
 
-        System.out.println("Dummy data generated successfully!");
+        System.out.println("Starting dummy data generation...");
+
+        try {
+            // 1. Login as Admin (Only needed for GET /api/users/email and registration)
+            adminTokenCookie = login("admin@admin.com", "admin123");
+            System.out.println("Logged in as admin.");
+
+            // 2. Create Sellers and Clients
+            createSellers();
+            createClients();
+            System.out.println("Created " + createdSellers.size() + " sellers and clients.");
+
+            // 3. Login as each Seller and create products
+            for (Map<String, Object> seller : createdSellers) {
+                loginAndCreateProducts(seller);
+            }
+
+            System.out.println("Dummy data generated successfully!");
+
+        } catch (Exception e) {
+            System.err.println("Failed to generate dummy data: " + e.getMessage());
+            e.printStackTrace();
+        }
     }
 
-    private String loginAdmin() {
-        // Assume you have an admin user: admin@admin.com / admin123
-        Map<String, String> login = Map.of("email", "admin@admin.com", "password", "admin123");
-        HttpEntity<Map<String, String>> entity = new HttpEntity<>(login, headers(MediaType.APPLICATION_JSON));
-        ResponseEntity<Map> resp = restTemplate.postForEntity(gatewayUrl + "/api/auth/login", entity, Map.class);
+    private String login(String email, String password) {
+        Map<String, String> login = Map.of("email", email, "password", password);
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        HttpEntity<Map<String, String>> entity = new HttpEntity<>(login, headers);
+
+        ResponseEntity<Map> resp = restTemplate.postForEntity(
+                gatewayUrl + "/api/auth/login", entity, Map.class);
+
         return extractJwtFromCookies(resp.getHeaders());
     }
 
-    private void clearAllData() {
-        // Call DELETE endpoints or use MongoDB drop via a special endpoint
-        deleteAll("/api/users");
-        deleteAll("/api/products");
-        deleteAll("/api/media/images");
-    }
-
-    private void deleteAll(String path) {
-        HttpEntity<?> entity = new HttpEntity<>(headers(MediaType.APPLICATION_JSON, adminToken));
-        try {
-            restTemplate.exchange(gatewayUrl + path, HttpMethod.DELETE, entity, String.class);
-        } catch (Exception e) {
-            System.out.println("No data to delete at " + path);
-        }
-    }
-
-    private List<String> createSellers() {
-        List<Map<String, Object>> sellers = Arrays.asList(
-                Map.of("name", "Nordic Designs AS", "email", "contact@nordic.no", "password", "seller123", "role", "SELLER"),
-                Map.of("name", "Scandi Living AB", "email", "hello@scandiliving.se", "password", "seller123", "role", "SELLER"),
-                Map.of("name", "Fjäll Home", "email", "info@fjallhome.dk", "password", "seller123", "role", "SELLER"),
-                Map.of("name", "Aurora Lights Co", "email", "sales@auroralights.fi", "password", "seller123", "role", "SELLER"),
-                Map.of("name", "Viking Craft", "email", "shop@vikingcraft.is", "password", "seller123", "role", "SELLER")
+    private void createSellers() throws Exception {
+        List<Map<String, Object>> sellers = List.of(
+                Map.of("firstName", "Nordic", "lastName", "Designs", "email", "seller1@shop.no", "password", "pass123", "role", "SELLER"),
+                Map.of("firstName", "Scandi", "lastName", "Living", "email", "seller2@scandi.se", "password", "pass123", "role", "SELLER"),
+                Map.of("firstName", "Fjall", "lastName", "Home", "email", "seller3@fjall.dk", "password", "pass123", "role", "SELLER"),
+                Map.of("firstName", "Aurora", "lastName", "Lights", "email", "seller4@aurora.fi", "password", "pass123", "role", "SELLER"),
+                Map.of("firstName", "Viking", "lastName", "Craft", "email", "seller5@viking.is", "password", "pass123", "role", "SELLER")
         );
 
-        List<String> ids = new ArrayList<>();
         for (Map<String, Object> s : sellers) {
-            HttpEntity<Map<String, Object>> entity = new HttpEntity<>(s, headers(MediaType.APPLICATION_JSON, adminToken));
-            ResponseEntity<Map> resp = restTemplate.postForEntity(gatewayUrl + "/api/users/register", entity, Map.class);
-            ids.add((String) ((Map) resp.getBody()).get("id"));
+            try {
+                registerUser(s);
+                createdSellers.add(s); // Store credentials for later login
+            } catch (Exception e) {
+                System.err.println("Could not register seller " + s.get("email") + ": " + e.getMessage());
+            }
         }
-        return ids;
     }
 
-    private void createClients() {
-        List<Map<String, Object>> clients = Arrays.asList(
-                Map.of("firstName", "Lars", "lastName", "Hansen", "email", "lars.h@dk.dk", "password", "client123"),
-                Map.of("firstName", "Ingrid", "lastName", "Svensson", "email", "ingrid.s@se.se", "password", "client123"),
-                Map.of("firstName", "Bjørn", "lastName", "Olsen", "email", "bjorn.o@no.no", "password", "client123"),
-                Map.of("firstName", "Freya", "lastName", "Nielsen", "email", "freya.n@dk.dk", "password", "client123"),
-                Map.of("firstName", "Erik", "lastName", "Larsson", "email", "erik.l@se.se", "password", "client123"),
-                Map.of("firstName", "Astrid", "lastName", "Berg", "email", "astrid.b@no.no", "password", "client123"),
-                Map.of("firstName", "Nils", "lastName", "Kristensen", "email", "nils.k@dk.dk", "password", "client123"),
-                Map.of("firstName", "Sofia", "lastName", "Pedersen", "email", "sofia.p@se.se", "password", "client123"),
-                Map.of("firstName", "Anders", "lastName", "Jensen", "email", "anders.j@no.no", "password", "client123"),
-                Map.of("firstName", "Elin", "lastName", "Madsen", "email", "elin.m@dk.dk", "password", "client123")
+    private void createClients() throws Exception {
+        List<Map<String, Object>> clients = List.of(
+                Map.of("firstName", "Lars", "lastName", "Hansen", "email", "lars@client.dk", "password", "pass123", "role", "CLIENT"),
+                Map.of("firstName", "Ingrid", "lastName", "Svensson", "email", "ingrid@client.se", "password", "pass123", "role", "CLIENT"),
+                Map.of("firstName", "Bjorn", "lastName", "Olsen", "email", "bjorn@client.no", "password", "pass123", "role", "CLIENT"),
+                Map.of("firstName", "Freya", "lastName", "Nielsen", "email", "freya@client.dk", "password", "pass123", "role", "CLIENT"),
+                Map.of("firstName", "Erik", "lastName", "Larsson", "email", "erik@client.se", "password", "pass123", "role", "CLIENT")
         );
 
         for (Map<String, Object> c : clients) {
-            HttpEntity<Map<String, Object>> entity = new HttpEntity<>(c, headers(MediaType.APPLICATION_JSON, adminToken));
-            restTemplate.postForEntity(gatewayUrl + "/api/users/register", entity, Map.class);
+            try {
+                registerUser(c);
+            } catch (Exception e) {
+                System.err.println("Could not register client " + c.get("email") + ": " + e.getMessage());
+            }
         }
     }
 
-    private void createProductsForSeller(String sellerId) {
-        List<String> names = Arrays.asList(
-                "Handwoven Wool Blanket", "Ceramic Coffee Mug Set", "Minimalist Wall Clock", "Organic Cotton Towels",
-                "Scandinavian Wood Tray", "LED Candle Lights", "Glass Vase Collection", "Linen Bedding Set",
-                "Bamboo Kitchen Utensils", "Marble Coasters"
+    private ResponseEntity<Map> registerUser(Map<String, Object> userDto) throws Exception {
+        MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
+
+        HttpHeaders dtoHeaders = new HttpHeaders();
+        dtoHeaders.setContentType(MediaType.APPLICATION_JSON);
+        HttpEntity<String> dtoEntity = new HttpEntity<>(objectMapper.writeValueAsString(userDto), dtoHeaders);
+        body.add("userDto", dtoEntity);
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.MULTIPART_FORM_DATA);
+        // Admin token is required to register other users if registration is restricted
+        headers.set("Cookie", adminTokenCookie);
+
+        HttpEntity<MultiValueMap<String, Object>> requestEntity = new HttpEntity<>(body, headers);
+
+        return restTemplate.postForEntity(gatewayUrl + "/api/auth/register", requestEntity, Map.class);
+    }
+
+    private void loginAndCreateProducts(Map<String, Object> seller) throws Exception {
+        String sellerEmail = (String) seller.get("email");
+        String sellerPassword = (String) seller.get("password");
+
+        System.out.println(" -- Logging in as seller: " + sellerEmail);
+        String sellerTokenCookie = login(sellerEmail, sellerPassword);
+
+        List<String> names = List.of(
+                "Wool Blanket", "Ceramic Mug", "Wall Clock", "Cotton Towel", "Wood Tray",
+                "LED Candle", "Glass Vase", "Linen Sheets", "Bamboo Cutlery", "Marble Coaster"
         );
 
         Random rand = new Random();
         for (String name : names) {
             Map<String, Object> product = Map.of(
-                    "name", name,
-                    "description", "High-quality " + name.toLowerCase() + " from Scandinavia.",
-                    "price", 19.99 + rand.nextDouble() * 80,
-                    "quantity", 5 + rand.nextInt(50),
-                    "sellerId", sellerId
+                    "name", name + " - " + (rand.nextInt(1000) + 100),
+                    "description", "Premium quality " + name.toLowerCase() + " from Scandinavia.",
+                    "price", 29.99 + rand.nextDouble() * 120,
+                    "quantity", 10 + rand.nextInt(40)
             );
 
-            HttpEntity<Map<String, Object>> entity = new HttpEntity<>(product, headers(MediaType.APPLICATION_JSON, adminToken));
-            ResponseEntity<Map> resp = restTemplate.postForEntity(gatewayUrl + "/api/products", entity, Map.class);
-            String productId = (String) ((Map) resp.getBody()).get("id");
+            HttpHeaders headers = new HttpHeaders();
+            headers.setContentType(MediaType.APPLICATION_JSON);
+            // *** Use the Seller's specific token here ***
+            headers.set("Cookie", sellerTokenCookie);
 
-            // Upload 8–15 images
-            int imgCount = 8 + rand.nextInt(8);
-            for (int i = 0; i < imgCount; i++) {
-                uploadImage(productId, i);
+            HttpEntity<Map<String, Object>> entity = new HttpEntity<>(product, headers);
+            try {
+                ResponseEntity<Map> resp = restTemplate.postForEntity(
+                        gatewayUrl + "/api/products", entity, Map.class);
+
+                String productId = (String) resp.getBody().get("id"); // Assuming the service returns "id"
+                if(productId == null) productId = (String) resp.getBody().get("productId");
+
+                if (productId != null) {
+                    System.out.println("    -> Created product: " + product.get("name") + " (ID: " + productId + ")");
+                    uploadRandomImages(productId, sellerTokenCookie, 1 + rand.nextInt(3));
+                }
+            } catch (Exception e) {
+                // This might fail if the token doesn't have SELLER role or if the DTO is missing fields.
+                System.err.println("    -> Failed to create product for " + sellerEmail + ": " + e.getMessage());
             }
         }
     }
 
-    private void uploadImage(String productId, int index) {
-        String imageUrl = "https://picsum.photos/600/800?random=" + (1000 + index);
-        MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
-        body.add("productId", productId);
-        body.add("file", new org.springframework.core.io.UrlResource(imageUrl));
+    private void uploadRandomImages(String productId, String tokenCookie, int count) {
+        for (int i = 0; i < count; i++) {
+            try {
+                MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
+                body.add("productId", productId);
 
-        HttpEntity<MultiValueMap<String, Object>> entity = new HttpEntity<>(body, headers(MediaType.MULTIPART_FORM_DATA, adminToken));
-        restTemplate.postForEntity(gatewayUrl + "/api/media/images", entity, String.class);
-    }
+                // Use a dummy byte array acting as a file (less susceptible to network issues)
+                ByteArrayResource dummyFile = new ByteArrayResource(new byte[100]) {
+                    @Override
+                    public String getFilename() {
+                        return "dummy-image-" + UUID.randomUUID() + ".jpg";
+                    }
+                };
+                body.add("file", dummyFile);
+                HttpHeaders headers = new HttpHeaders();
+                headers.setContentType(MediaType.MULTIPART_FORM_DATA);
+                // *** Use the Seller's specific token for media upload too ***
+                headers.set("Cookie", tokenCookie);
 
-    private HttpHeaders headers(MediaType contentType) {
-        return headers(contentType, null);
-    }
+                HttpEntity<MultiValueMap<String, Object>> entity = new HttpEntity<>(body, headers);
+                // Corrected endpoint URL assumption: /api/media/images is common for uploads
+                restTemplate.postForEntity(gatewayUrl + "/api/products/create/images", entity, String.class);
 
-    private HttpHeaders headers(MediaType contentType, String token) {
-        HttpHeaders h = new HttpHeaders();
-        h.setContentType(contentType);
-        if (token != null) {
-            h.setBearerAuth(token);
+            } catch (Exception e) {
+                System.err.println("    -> Failed to upload image for product " + productId);
+            }
         }
-        return h;
     }
 
     private String extractJwtFromCookies(HttpHeaders headers) {
-        return headers.getFirst(HttpHeaders.SET_COOKIE)
-                .split("jwt=")[1]
-                .split(";")[0];
+        List<String> cookies = headers.get(HttpHeaders.SET_COOKIE);
+        if (cookies == null) throw new RuntimeException("No Set-Cookie header in response.");
+
+        return cookies.stream()
+                .flatMap(cookie -> Arrays.stream(cookie.split(";")))
+                .map(String::trim)
+                .filter(s -> s.startsWith("jwt="))
+                .findFirst()
+                .orElseThrow(() -> new RuntimeException("JWT cookie not found in response."));
     }
+
+    // Removed unused getUserIdByEmail method
 }
